Added dummy .wo folders for template-less components to prevent long delays in development mode.